--- a/index.html
+++ b/index.html
@@ -261,3 +261,224 @@
         saveRecentRoom(data.code, data.name);
         setStage('paddock');
       };
+      // ---------------- PADDOCK ----------------
+      const renderPaddock = () => {
+        const participants = currentRoom?.data?.participants || [];
+        const subRooms = currentRoom?.data?.sub_rooms || [];
+
+        return (
+          <div className="min-h-screen p-8">
+            <div className="max-w-6xl mx-auto">
+              <div className="flex justify-between items-center mb-10">
+                <div>
+                  <h1 className="orbitron text-3xl">{currentRoom.name}</h1>
+                  <p className="text-gray-400 font-mono">Code: {currentRoom.code}</p>
+                </div>
+                <button className="btn-danger" onClick={() => {
+                  setCurrentRoom(null);
+                  setStage('lander');
+                }}>Leave Room</button>
+              </div>
+
+              {/* Races */}
+              <div className="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                {subRooms.map((sr, idx) => (
+                  <div
+                    key={sr.id}
+                    className="glass p-6 rounded-xl cursor-pointer hover:border-red-500"
+                    onClick={() => {
+                      setCurrentSubRoom(sr);
+                      setStage('race-grid');
+                    }}
+                  >
+                    <h3 className="orbitron text-xl mb-2">{sr.name}</h3>
+                    <p className="text-sm text-gray-400">
+                      {sr.predictions.length} predictions
+                    </p>
+                  </div>
+                ))}
+              </div>
+            </div>
+          </div>
+        );
+      };
+
+      // ---------------- RACE GRID ----------------
+      const renderRaceGrid = () => {
+        const freshSubRoom = currentRoom.data.sub_rooms.find(
+          sr => sr.id === currentSubRoom.id
+        );
+        const participants = currentRoom.data.participants;
+
+        return (
+          <div className="min-h-screen p-8">
+            <div className="max-w-5xl mx-auto">
+              <button
+                className="mb-6 text-gray-400"
+                onClick={() => setStage('paddock')}
+              >
+                ← Back
+              </button>
+
+              <h1 className="orbitron text-3xl mb-6">{freshSubRoom.name}</h1>
+
+              {/* Participants */}
+              <div className="space-y-4 mb-8">
+                {participants.map((p, idx) => (
+                  <div
+                    key={p.id}
+                    className="glass p-5 rounded-xl cursor-pointer"
+                    onClick={() => {
+                      setCurrentUser(p);
+                      setStage('verdicts');
+                    }}
+                  >
+                    <div className="flex justify-between items-center">
+                      <div className="flex items-center gap-4">
+                        <div
+                          className="w-5 h-5 rounded-full"
+                          style={{ backgroundColor: TEAM_COLORS[p.team] }}
+                        ></div>
+                        <div>
+                          <div className="font-bold">{p.name}</div>
+                          <div className="text-sm text-gray-400">{p.team}</div>
+                        </div>
+                      </div>
+                      <div className="text-gray-500">#{idx + 1}</div>
+                    </div>
+                  </div>
+                ))}
+              </div>
+
+              <button
+                className="btn-primary w-full"
+                onClick={() => setShowAddPredictionModal(true)}
+              >
+                + Add Prediction
+              </button>
+            </div>
+
+            {/* GRAPHICAL MODAL (FIX #4) */}
+            <div className={`overlay ${showAddPredictionModal ? 'show' : ''}`}
+              onClick={() => setShowAddPredictionModal(false)}
+            ></div>
+
+            <div className={`modal ${showAddPredictionModal ? 'show' : ''}`}>
+              <h2 className="orbitron text-xl mb-4">Add Prediction</h2>
+              <textarea
+                className="input-field mb-4"
+                rows="3"
+                value={predictionText}
+                onChange={e => setPredictionText(e.target.value)}
+                placeholder="Enter your prediction…"
+              />
+              <button
+                className="btn-primary w-full"
+                onClick={() => {
+                  if (!predictionText.trim()) return;
+
+                  const updated = currentRoom.data.sub_rooms.map(sr => {
+                    if (sr.id === freshSubRoom.id) {
+                      return {
+                        ...sr,
+                        predictions: [
+                          ...sr.predictions,
+                          {
+                            id: generateId(),
+                            userId: currentUser?.id || '',
+                            text: predictionText,
+                            done: false
+                          }
+                        ]
+                      };
+                    }
+                    return sr;
+                  });
+
+                  supabaseClient.from('f1_rooms')
+                    .update({ data: { ...currentRoom.data, sub_rooms: updated } })
+                    .eq('id', currentRoom.id);
+
+                  setPredictionText('');
+                  setShowAddPredictionModal(false);
+                }}
+              >
+                Save Prediction
+              </button>
+            </div>
+          </div>
+        );
+      };
+
+      // ---------------- VERDICTS ----------------
+      const renderVerdicts = () => {
+        const freshSubRoom = currentRoom.data.sub_rooms.find(
+          sr => sr.id === currentSubRoom.id
+        );
+        const predictions = freshSubRoom.predictions.filter(
+          p => p.userId === currentUser.id
+        );
+
+        return (
+          <div className="min-h-screen p-8">
+            <div className="max-w-4xl mx-auto">
+              <button
+                className="mb-6 text-gray-400"
+                onClick={() => setStage('race-grid')}
+              >
+                ← Back
+              </button>
+
+              <h1 className="orbitron text-3xl mb-6">{currentUser.name}</h1>
+
+              <div className="space-y-4">
+                {predictions.map((pred, idx) => (
+                  <div key={pred.id} className="glass p-4 rounded-xl">
+                    <div className="flex justify-between items-center">
+                      <span>{pred.text}</span>
+                      <input
+                        type="checkbox"
+                        checked={pred.done}
+                        onChange={() => {
+                          const updated = freshSubRoom.predictions.map(p =>
+                            p.id === pred.id ? { ...p, done: !p.done } : p
+                          );
+
+                          supabaseClient.from('f1_rooms')
+                            .update({
+                              data: {
+                                ...currentRoom.data,
+                                sub_rooms: currentRoom.data.sub_rooms.map(sr =>
+                                  sr.id === freshSubRoom.id
+                                    ? { ...sr, predictions: updated }
+                                    : sr
+                                )
+                              }
+                            })
+                            .eq('id', currentRoom.id);
+                        }}
+                      />
+                    </div>
+                  </div>
+                ))}
+              </div>
+            </div>
+          </div>
+        );
+      };
+
+      // ---------------- MAIN SWITCH ----------------
+      return (
+        <>
+          {stage === 'lander' && renderLander()}
+          {stage === 'paddock' && renderPaddock()}
+          {stage === 'race-grid' && renderRaceGrid()}
+          {stage === 'verdicts' && renderVerdicts()}
+        </>
+      );
+    }
+
+    ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+  </script>
+</body>
+</html>
