--- a/index.html
+++ b/index.html
@@ -832,7 +832,18 @@ const deleteRoom = async (code) => {
     <div className="flex flex-col items-center justify-end w-[120px]">
       
       {/* 🔒 FIXED NAME AREA (never moves) */}
-      <div className="h-24 flex flex-col justify-end text-center mb-2">
+      <div className="h-24 flex flex-col justify-end text-center mb-3 z-20">
+  <div className="text-3xl font-black orbitron mb-1">
+    {position}
+  </div>
+
+  {participants.map(p => (
+    <div key={p.id}>
+      <div className="font-bold text-sm">{p.name}</div>
+      <div className="text-xs text-gray-400">{p.accuracy.toFixed(1)}%</div>
+    </div>
+  ))}
+</div>
         {participants.map(p => (
           <div key={p.id}>
             <div className="font-bold text-sm">{p.name}</div>
@@ -848,9 +859,6 @@ const deleteRoom = async (code) => {
         className={`podium-bar w-full ${isStriped ? 'striped' : ''}`}
         style={barStyle}
       >
-        <div className="absolute -top-10 left-0 right-0 text-center">
-          <span className="orbitron text-2xl font-black">{position}</span>
-        </div>
       </div>
     </div>
   );
